# internal/handlers/handlers.go
@@ -2,7 +2,6 @@ package handlers
 
 import (
 	"database/sql"
-	"fmt"
 	"net/http"
 
 	"github.com/Oleg-OMON/gin-rest-api.git/internal/models"
@@ -24,7 +23,7 @@ func NewGameHandler(DB *repository.Repository) GameHandler {
 // @Tags         games
 // @Accept       json
 // @Produce      json
-// @Success      200  {integer} integer 1
+// @Success      200  {array} models.Player
 // @Router       /api/games/all_players [get]
 func (h *GameHandler) GetAllPlayers(c *gin.Context) {
 	// TODO: выводит данные о всех игроках
@@ -34,18 +33,21 @@ func (h *GameHandler) GetAllPlayers(c *gin.Context) {
 	}
 	data, err := stmt.Queryx()
 	if err != nil {
-		log.Debug(err)
+		log.Info(err)
 	}
 	defer data.Close()
 
 	players := []models.Player{}
 	for data.Next() {
 		pl := models.Player{}
-		err := data.Scan(&pl.PlayerId, &pl.FirstName, &pl.LastName, &pl.Nickname, &pl.Citizenship, &pl.Dob, &pl.Role)
-		if err != nil {
-			log.Debug(sql.ErrNoRows)
+		if err := data.Scan(&pl.PlayerId, &pl.FirstName, &pl.LastName, &pl.Nickname, &pl.Citizenship, &pl.Dob, &pl.Role); err != nil {
+			if err == sql.ErrNoRows {
+				log.Debug(err)
+			}
+			log.Debug(err)
 			continue
 		}
+
 		players = append(players, pl)
 	}
 
@@ -58,7 +60,7 @@ func (h *GameHandler) GetAllPlayers(c *gin.Context) {
 // @Tags         games
 // @Accept       json
 // @Produce      json
-// @Success      200  {integer} integer 1
+// @Success      200  {array} models.Game
 // @Router       /api/games/all_games [get]
 func (h *GameHandler) AllGames(c *gin.Context) {
 	// TODO: выводит данные о всех играх
@@ -78,7 +80,11 @@ func (h *GameHandler) AllGames(c *gin.Context) {
 		game := models.Game{}
 		err := data.Scan(&game.GameId, &game.Team, &game.City, &game.Goals, &game.GameDate, &game.Own)
 		if err != nil {
-			fmt.Println(sql.ErrNoRows)
+			if err == sql.ErrNoRows {
+				log.WithError(err).Error("ВОЗВРАЩАЕМЫЕ ДАННЫЕ НЕ ЯВЛЯЮТЬСЯ СТРОКОЙ")
+			} else {
+				log.WithError(err).Debug("ДАННЫЕ НЕ НАЙДЕНЫ")
+			}
 			continue
 		}
 		games = append(games, game)
@@ -90,15 +96,15 @@ func (h *GameHandler) AllGames(c *gin.Context) {
 
 // ResultGames godoc
 // @Summary      get games involving the player
-// @Description  get list by nicname
+// @Description  get list by nickname
 // @Tags         games
 // @Accept       json
 // @Produce      json
-// @Param        input  body string  true  "Player nickname"
-// @Success      200  {integer} integer 1
-// @Router       /api/games/results_games/:nickname [get]
+// @Param        nickname path string true "player nickname"
+// @Success      200  {object} models.ResultModelsPlayerLineup
+// @Router       /api/games/results_games/{nickname} [get]
 func (h *GameHandler) ResultGames(c *gin.Context) {
-	// TODO: выводит об играх футболиста, по его nickname
+	// TODO: выводит данные об играх футболиста, по его nickname
 	nickname := c.Param("nickname")
 	rows, err := h.DB.DataBase.Query(`SELECT p.nickname, g.team, c.start, c.time_in, c.goals, c.cards FROM lineups c, players p, games g  WHERE c.player_id = p.player_id AND c.game_id = g.game_id AND p.nickname = $1`, nickname)
 	if err != nil {
@@ -113,28 +119,31 @@ func (h *GameHandler) ResultGames(c *gin.Context) {
 		r := models.ResultModelsPlayerLineup{}
 		err := rows.Scan(&r.Nickname, &r.Team, &r.Start, &r.TimeIn, &r.Goals, &r.Cards)
 		if err != nil {
-			fmt.Println(sql.ErrNoRows)
+			if err == sql.ErrNoRows {
+				log.Debug(err)
+			} else {
+				log.Debug(err)
+			}
 			continue
 		}
 		results = append(results, r)
 	}
-	log.Info(results)
 	c.IndentedJSON(http.StatusOK, results)
 
 }
 
 // GetPlayer godoc
-// @Summary Retrieves user based on given ID
+// @Summary Retrieves user based on given name
 // @Produce json
-// @Param id path integer true "User Nickname"
+// @Param nickname path string true "player nickname"
 // @Success 200 {object} models.Player
-// @Router /api/games/get_player/:nickname [get]
+// @Router /api/games/get_player/{nickname} [get]
 func (h *GameHandler) GetPlayer(c *gin.Context) {
 	// вывод данных о игроке
 	nickname := c.Param("nickname")
 	stmt, err := h.DB.DataBase.Preparex(`SELECT * FROM players WHERE nickname = $1`)
 	if err != nil {
-		log.Fatal(err)
+		log.Panic(err)
 	}
 	defer stmt.Close()
 
@@ -144,7 +153,12 @@ func (h *GameHandler) GetPlayer(c *gin.Context) {
 		player := models.Player{}
 		err = rows.Scan(&player.PlayerId, &player.FirstName, &player.LastName, &player.Nickname, &player.Citizenship, &player.Dob, &player.Role)
 		if err != nil {
-			log.Debug(sql.ErrNoRows)
+			if err == sql.ErrNoRows {
+				log.WithError(err).Error("ВОЗВРАЩАЕМЫЕ ДАННЫЕ НЕ ЯВЛЯЮТЬСЯ СТРОКОЙ")
+			} else {
+				log.WithError(err).Debug("ДАННЫЕ НЕ НАЙДЕНЫ")
+			}
+			continue
 		}
 
 		result = append(result, player)
